# qnx-fighter

./: .gitignore  CMakeLists.txt  Game.cpp  Makefile  README.md  main.cpp  qnx.nto.toolchain.cmake  screen_writer.c  source.sh
.cache/clangd/index/: cgltf.h.DE7512E3FEA669BA.idx  config.h.8792663DE93790DD.idx  context.c.DA91B989A51B6B57.idx  dr_mp3.h.8F2710485DA16566.idx  dr_wav.h.3EFD610928532E16.idx  egl_context.c.A543AB9BE061E43F.idx  glad.h.5250156A3CC058F6.idx  glfw3.h.9E354C5D87B6CA2F.idx  glfw3native.h.60CCFD122F977E04.idx  glx_context.c.7C000D97E82A9EB9.idx  init.c.CD894970893B3802.idx  input.c.39B3FCCFFAD7646D.idx  (+69 more)
NCURSES/: README.md  build.sh  example.cpp  game  main.cpp
NCURSES/includes/: player.h
NCURSES/private/: player.cpp
NCURSES/public/: player.h
NCURSES/source/: player.cpp
PYGAME/: README.md  game.py
PYGAME/Scripts/: background.py  entities.py  menu.py  utils.py
PYGAME/scripts/: editor.py  entities.py
RAYLIB/include/: Animator.h  Environment.h  Player.h
RAYLIB/source/: Animator.cpp  Environment.cpp  Game.cpp  Player.cpp
include/: Animator.h  Environment.h  Player.h
private/: Animator.h  Environment.h  Player.h
public/: Animator.cpp  Player.cpp
raylib/: CMakeOptions.txt  Game.cpp
raylib/source/: Player.cpp
raylib/src/: CMakeLists.txt
rpi-gpio/: README.md
rpi-gpio/gpioctrl/: client.c  common.mk  gpio.c  gpioctrl.h  main.c  mainwindow.c
rpi-gpio/resmgr/: common.mk  event.c  main.c  pwm.c  rpi_gpio.use  rpi_gpio_priv.h  spi.c
rpi-gpio/shiplist/: rpi_gpio.xml
source/: Animator.cpp  Environment.cpp  Player.cpp
(+7 files in other folders)
